# rs-animal-chat

./: .gitignore  Cargo.toml
src/: main.rs
src/chat/: mod.rs  tokio_tungstenite_ws.rs  ws_rs.rs
src/route/: get.rs
static/angular_chat/: README.md  karma.conf.js  package.json
static/angular_chat/src/: index.html
static/angular_chat/src/app/: app.component.html  app.component.ts  chat.service.ts  message-history.service.ts
static/browserify_chat/: bundle.js  index.html  index.js
static/chat/: bundle.js  index.html  index.js  package-lock.json
static/css/: main.css
static/small_window_chat/: angular.json  index.html
static/small_window_chat/src/app/: app.component.spec.ts  app.component.ts  chat.service.ts  idAssigned.ts  message-history.service.ts  messageEntry.ts
static/small_window_chat/src/app/messages/: messages.component.html  messages.component.ts
